# condicio

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: repo-settings.md  social-preview.html
.github/ISSUE_TEMPLATE/: config.yml  rfc.yml
.github/workflows/: publish.yml  validate.yml
docs/: CNAME  README.md  field-reference.html  field-reference.md  governance.html  governance.md  index.html  usage.html  usage.md
docs/assets/css/: style.css
docs/schema/: index.html
docs/validator/: index.html
paper/: paper.tex
python/: README.md  pyproject.toml  verify_version.py
python/condicio/: __init__.py  cli.py  models.py  validator.py
python/tests/: test_validator.py
schema/: condicio.schema.json
schema/examples/: employment-agreement.json  employment-agreement.yaml  license-agreement.json  license-agreement.yaml  nda.json  nda.yaml  service-agreement.json  service-agreement.yaml
scripts/: generate-docs.js  generate_social_preview.py  validate.js
