[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "condicio"
version = "0.1.4"
description = "Python tools for the Condicio contract intelligence schema"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Docfide", email = "opensource@docfide.com"},
]
keywords = ["contract", "schema", "clm", "contract-intelligence", "legal-tech", "json-schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.18",
    "referencing>=0.28",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/docfide/condicio"
Repository = "https://github.com/docfide/condicio"
Documentation = "https://github.com/docfide/condicio/blob/main/docs/usage.md"

[project.scripts]
condicio = "condicio.cli:main"

[tool.setuptools.packages.find]
include = ["condicio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
